--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -37,7 +37,7 @@
           <button mz-button [flat]="true" [noWaves]="true"(click)="new()">Nuevo</button>
           <button mz-button [flat]="true" [noWaves]="true" [disabled]="selectedRow === null" (click)="update()">Modificar</button>
           <button mz-button [flat]="true" [noWaves]="true" [disabled]="selectedRow === null || !user.isActive"  (click)="delete()">Eliminar</button>
-          <mz-checkbox-container align="end">
+          <mz-checkbox-container align="right">
             <input mz-checkbox
                    class="checkbox-crud"
                    [label]="'Ver inactivos'"
