--- a/src/app/components/user/user-internal-crud/user-address-tab/user-address-tab.component.html
+++ b/src/app/components/user/user-internal-crud/user-address-tab/user-address-tab.component.html
@@ -9,6 +9,8 @@
                  type="text"
                  [label]="'Provincia'"
                  [autocomplete]="provinceList"
+                 [disabled]="!enabledField"
+                 [(ngModel)]="address.province"
           >
         </mz-input-container>
       </div>
@@ -21,6 +23,8 @@
                  type="text"
                  [label]="'Municipio'"
                  [autocomplete]="districtList"
+                 [disabled]="!enabledField"
+                 [(ngModel)]="address.district"
           >
         </mz-input-container>
       </div>
@@ -33,6 +37,8 @@
                  [label]="'Localidad'"
                  [autocomplete]="locationList"
                  (change)="onLocationSelectChange($event.target.value)"
+                 [disabled]="!enabledField"
+                 [(ngModel)]="address.location"
           >
         </mz-input-container>
       </div>
@@ -42,8 +48,10 @@
           <input mz-input
                  id="postalCode"
                  (change)="onPostalCodeSelectChange($event.target.value)"
-                 type="text"
+                 type="number"
                  [label]="'Código Postal'"
+                 [disabled]="!enabledField"
+                 [(ngModel)]="address.postalCode"
           >
         </mz-input-container>
       </div>
@@ -57,6 +65,8 @@
                  type="text"
                  [label]="'Calle'"
                  [autocomplete]="streetList"
+                 [disabled]="!enabledField"
+                 [(ngModel)]="address.street"
           >
         </mz-input-container>
       </div>
@@ -68,52 +78,95 @@
                  (change)="onNumberSelectChange($event.target.value)"
                  type="text"
                  [label]="'Número'"
-                 autocomplete="off"
+                 [disabled]="!enabledField"
+                 [(ngModel)]="address.number"
           >
         </mz-input-container>
       </div>
+      <div class="col s12 m6 xl6">
+        <label> Es un departamento</label>
+        <mz-switch-container class="checkbox-crud">
+          <input mz-switch
+                 [class]="'checkbox-crud'"
+                 id="isDepartment"
+                 [off]="'No'"
+                 [on]="'Si'"
+                 type="checkbox"
+                 [disabled]="!enabledField"
+                 [(ngModel)]="address.isDepartment"
+          >
+        </mz-switch-container>
+      </div>
+
+      <div class="input-field col s12 m6 xl6">
+        <mz-input-container>
+          <input mz-input
+                 id="department"
+                 type="text"
+                 [label]="'Departamento'"
+                 [disabled]="(!enabledField || !address.isDepartment)"
+                 [(ngModel)]="address.department"
+          >
+        </mz-input-container>
+      </div>
+
+      <div class="col s12 m6 xl6">
+        <label> Por defecto</label>
+        <mz-switch-container>
+          <input class="checkbox-crud" mz-switch
+                 id="isDefault"
+                 (change)="onIsDefaultSelectChange($event.target.value)"
+                 [off]="'No'"
+                 [on]="'Si'"
+                 type="checkbox"
+                 [disabled]="!enabledField"
+                 [(ngModel)]="address.isDefault"
+          >
+        </mz-switch-container>
+      </div>
+
     </div>
   </div>
 </div>
 
-<div class="table-internal-crud.container">
-  <div class="row">
-    <div class="col s10">
-      <div class="table-container">
-        <table class="highlight centered striped bordered table-container">
-          <thead>
-          <tr>
-            <th *ngFor="let row of displayedColumns"> {{row}}</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr class="row-grid-crud" *ngFor="let row of user.addresses"
-              (click)="setClickedRow(row)"
-              [class.active]="row.oid == selectedRow" [ngClass]="{'row-inactive': !row.isActive}">
-            <td>{{ row.userName }}</td>
-            <td>{{ row.name }}</td>
-            <td>{{ row.surname }}</td>
-            <td>{{ row.email }}</td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
+<hr/>
 
-    <div class="col s2 icons-internal-crud">
-      <div class="row">
-        <div *ngIf="!address else acceptAndCancel">
-          <i class="small icon-internal-crud material-icons col s12" (click)="new()">add_circle</i>
-          <i class="small icon-internal-crud material-icons col s12">data_usage</i>
-          <i class="small icon-internal-crud material-icons col s12">remove_circle</i>
-        </div>
-      </div>
+<div class="col s3 offset-s9">
+  <div class="icons-internal-crud">
+    <div *ngIf="(!enabledField) else acceptAndCancel">
+      <i class="small icon-internal-crud material-icons" (click)="new()">add</i>
     </div>
   </div>
 </div>
-
 
 <ng-template #acceptAndCancel>
-  <i class="small icon-internal-crud material-icons col s12" (click)="save()">check_circle</i>
-  <i class="small icon-internal-crud material-icons col s12" (click)="cancel()">cancel</i>
+  <i class="small icon-internal-crud material-icons" (click)="save()">check_circle</i>
+  <i class="small icon-internal-crud material-icons" (click)="delete()">delete</i>
+  <i class="small icon-internal-crud material-icons" (click)="cancel()">cancel</i>
 </ng-template>
+
+
+<div class="row">
+  <div class="col s10 offset-s1">
+    <table class="highlight centered striped bordered table-container-internal-crud">
+      <thead>
+      <tr>
+        <th *ngFor="let row of displayedColumns"> {{row}}</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr class="row-grid-crud" *ngFor="let row of user.addresses"
+          (click)="setClickedRow(row)"
+          [class.active]="row.oid === selectedRow" [ngClass]="{'row-inactive': !row.isActive}">
+        <td>{{ row.street }}</td>
+        <td>{{ row.number }}</td>
+        <td>{{ row.location }}</td>
+        <td *ngIf="row.isDefault"> <i class="small material-icons">check_box</i></td>
+        <td *ngIf="!row.isDefault"> <i class="small material-icons">check_box_outline_blank</i></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+
