--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,3 +1,4 @@
+<app-crud (user)="persistentObjectLogicalDelete"></app-crud>
 <div class="container">
   <div class="row">
     <div class="col s12 offset-s0  m12 l11 offset-l1 xl10 offset-xl1">
@@ -34,9 +35,13 @@
           </table>
         </mz-card-content>
         <mz-card-action>
-          <button mz-button [flat]="true" [noWaves]="true"(click)="new()">Nuevo</button>
-          <button mz-button [flat]="true" [noWaves]="true" [disabled]="selectedRow === null" (click)="update()">Modificar</button>
-          <button mz-button [flat]="true" [noWaves]="true" [disabled]="selectedRow === null || !user.isActive"  (click)="delete()">Eliminar</button>
+          <button mz-button [flat]="true" [noWaves]="true" (click)="new()">Nuevo</button>
+          <button mz-button [flat]="true" [noWaves]="true" [disabled]="selectedRow === null" (click)="update()">
+            Modificar
+          </button>
+          <button mz-button [flat]="true" [noWaves]="true" [disabled]="selectedRow === null || !user.isActive"
+                  (click)="delete()">Eliminar
+          </button>
           <mz-checkbox-container align="right">
             <input mz-checkbox
                    class="checkbox-crud"
