--- a/src/app/components/user/user-internal-crud/user-internal-crud.component.html
+++ b/src/app/components/user/user-internal-crud/user-internal-crud.component.html
@@ -1,7 +1,7 @@
 <div class="section">
   <div class="row m-valign-wrapper">
     <div class="col s12 m12">
-      <mz-modal [fixedFooter]="true"  [options]="modalOptions">
+      <mz-modal [fixedFooter]="true" [options]="modalOptions">
         <mz-modal-header>
           <h4>Usuario</h4>
         </mz-modal-header>
@@ -12,16 +12,17 @@
             <mz-tab-item [active]="'true'"
                          [label]="'Datos Generales'"
             >
-              <app-user-generaldata-tab [form]="form" [(user)]="user"></app-user-generaldata-tab>
+              <app-user-generaldata-tab [(user)]="user"></app-user-generaldata-tab>
             </mz-tab-item>
             <mz-tab-item [label]="'Direcciones'"
             >
-              <app-user-address-tab [form]="form" [(user)]="user"></app-user-address-tab>
+              <app-user-address-tab  [(user)]="user"></app-user-address-tab>
             </mz-tab-item>
           </mz-tab>
         </mz-modal-content>
         <mz-modal-footer>
-          <button mz-button [flat]="true" (click)="save()" mz-modal-close>Guardar</button>
+
+          <button mz-button [flat]="true" (click)="save()" [disabled]="!generalDataTab.form.valid || addressDataTab.form.valid" mz-modal-close>Guardar</button>
           <button *ngIf=" user.isActive !== undefined && !user.isActive" (click)="saveAndActive()" mz-button
                   [flat]="true" mz-modal-close>Activar y Guardar
           </button>
