--- a/src/app/components/crud/crud.component.html
+++ b/src/app/components/crud/crud.component.html
@@ -13,6 +13,6 @@
            [filledIn]="true"
            type="checkbox"
            [(ngModel)]="viewInactive"
-           (change)="viewElementActive()">
+           (change)="viewElementActive(viewInactive)">
   </mz-checkbox-container>
 </div>
