--- a/src/app/components/user/user-internal-crud/user-internal-crud.component.html
+++ b/src/app/components/user/user-internal-crud/user-internal-crud.component.html
@@ -22,11 +22,13 @@
         </mz-modal-content>
         <mz-modal-footer>
 
-          <button mz-button [flat]="true" (click)="save()" [disabled]="!generalDataTab.form.valid" mz-modal-close>Guardar</button>
-          <button *ngIf=" user.isActive !== undefined && !user.isActive" (click)="saveAndActive()" mz-button
-                  [flat]="true" mz-modal-close>Activar y Guardar
-          </button>
-          <button mz-button [flat]="true" mz-modal-close>Cancelar</button>
+          <app-internal-crud
+            [form]="generalDataTab.form"
+            [persistentObject]="user"
+            (saveEmitter)="save()"
+          >
+
+          </app-internal-crud>
         </mz-modal-footer>
       </mz-modal>
     </div>
