--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -35,7 +35,7 @@
         </mz-card-content>
         <mz-card-action>
       <app-crud [selectedRow]="selectedRow"
-                [persistentObject]="persistentObject"
+                [persistentObject]="user"
                 (newEmitter)="new()"
                 (updateEmitter)="update()"
                 (deleteEmitter)="delete()"
