validaciones tabs user

--- a/src/app/components/user/user-internal-crud/user-address-tab/user-address-tab.component.html
+++ b/src/app/components/user/user-internal-crud/user-address-tab/user-address-tab.component.html
@@ -176,8 +176,7 @@
         <td>{{ row.number }}</td>
         <td>{{ row.location }}</td>
         <td *ngIf="row.isDefault"><i class="small material-icons">check_box</i></td>
-        <td *ngIf="!row.isDefault"><i class="small material-icons">check_
-          box_outline_blank</i></td>
+        <td *ngIf="!row.isDefault"><i class="small material-icons">check_box_outline_blank</i></td>
       </tr>
       </tbody>
     </table>
