--- a/src/app/components/user/user-internal-crud/user-generaldata-tab/user-generaldata-tab.component.html
+++ b/src/app/components/user/user-internal-crud/user-generaldata-tab/user-generaldata-tab.component.html
@@ -11,6 +11,7 @@
                    [(ngModel)]="user.userName"
                    type="text" [validate]="true"
                    [label]="'Nombre de usuario'"
+                   [formControlDisabled]= "user.oid !== undefined"
                    autocomplete="off">
           </mz-input-container>
         </div>
