--- a/src/app/components/user/user-internal-crud/user-internal-crud.component.html
+++ b/src/app/components/user/user-internal-crud/user-internal-crud.component.html
@@ -1,7 +1,7 @@
 <div class="section">
   <div class="row m-valign-wrapper">
     <div class="col s12 m12">
-      <mz-modal [fixedFooter]="true" [options]="modalOptions">
+      <mz-modal [fixedFooter]="true" [options]="modalOptions"  [fullscreen]="true">
         <mz-modal-header>
           <h4>Usuario</h4>
         </mz-modal-header>
