--- a/src/app/components/user/user-internal-crud/user-address-tab/user-address-tab.component.html
+++ b/src/app/components/user/user-internal-crud/user-address-tab/user-address-tab.component.html
@@ -146,7 +146,7 @@
 </form>
 <hr/>
 
-<div class="col s3 offset-s8">
+<div class="col s12  m3 offset-m8">
   <div class="icons-internal-crud">
     <div *ngIf="(!enabledField) else acceptAndCancel">
       <i class="small icon-internal-crud material-icons" (click)="new()">add</i>
