--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,6 +1,8 @@
 $primary-color: #fb3e8d !default;
 $primary-color-light: #F4511E !default;
 $primary-color-dark: #BF360C !default;
+$title-text: #FAFAFA !default;
+$rowInactive: #9c9c9c;
 
 input :focus {
   border-bottom: 10px solid $primary-color-dark;
@@ -20,7 +22,6 @@ input :focus {
   background-color: $primary-color-light !important;
 }
 
-
 .material-icons{
   color: $primary-color-dark !important;
 }
@@ -32,7 +33,6 @@ input :focus {
 .btn-flat{
   color: $primary-color-dark!important;
 }
-
 
 .material-icons.active {
   color: $primary-color-light !important;
@@ -66,23 +66,29 @@ app-side-nav {
   display: none;
   background-color: $primary-color-light !important;
 }
+
 .row-inactive {
-  color: #828282;
+  color: $rowInactive;
 }
 
 .table-container tr.active td {
   background-color: #323232 !important;
-  color: white;
+  color: $title-text;
 }
 
 .table-container-internal-crud tr.active td {
   background-color: #323232 !important;
-  color: white;
+  color: $title-text;
 }
 
 hr{
   height: 2px;
-  background-color: #eeeeee ;
+  background-color: $title-text;
   border: none;
+}
+
+[type="checkbox"].filled-in:disabled:not(:checked)+label:after {
+  border-color: transparent;
+  background-color: $primary-color-light!important;
 }
 
